integration-tests/tests/integration/snapshots/integration__help_root_topics.snap
---
source: integration-tests/tests/integration/main.rs
expression: "&root_stdout[topics_idx..]"
---
Help topics (try cargo nextest help <topic>):
  filterset    the filterset DSL: predicates, operators, and matchers
  repo-config  repository configuration reference
