integration-tests/tests/integration/snapshots/integration__help_unknown_topic.snap
---
source: integration-tests/tests/integration/main.rs
expression: unknown.to_snapshot()
---
exit status|code: Some(2)
--- stdout ---


--- stderr ---
error: unrecognized subcommand 'bogus'

  tip: a similar subcommand exists: 'b'

Usage: cargo nextest [OPTIONS] <COMMAND>

For more information, try '--help'.

Help topics (try cargo nextest help <topic>):
  filterset    the filterset DSL: predicates, operators, and matchers
  repo-config  repository configuration reference
  user-config  user configuration reference
