integration-tests/tests/integration/snapshots/integration__list_with_default_set_args.snap
---
source: integration-tests/tests/integration/main.rs
expression: with_args_output.stdout_as_str()
---
fixture-project::basic test_stdin_closed
