integration-tests/tests/integration/snapshots/integration__list_with_default_set_expr_package.snap
---
source: integration-tests/tests/integration/main.rs
expression: package_example_output.stdout_as_str()
---

