integration-tests/tests/integration/snapshots/integration__list_with_default_set_expr_package_bound_all.snap
---
source: integration-tests/tests/integration/main.rs
expression: package_example_bound_all_output.stdout_as_str()
---
cdylib-example tests::test_multiply_two_cdylib
